[project]
name = "trl-grpo-chessenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "datasets>=4.8.5",
    "tqdm>=4.67.3",
    "trl>=1.4.0",
    "wandb>=0.26.1",
]

[project.optional-dependencies]
gpu = [
    "trl[vllm]"
]
